[package]
name = "music-backup"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = "0.6"
google-cloud-storage = "0.15"
google-cloud-auth = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary
